* Fix undefined on generated codepen from docs * Fix component framework toggle background overflow in docs

--- a/.tooling/eleventy/assets/css/style.css
+++ b/.tooling/eleventy/assets/css/style.css
@@ -733,6 +733,7 @@ header .header-version-select {
     border-radius: 6px;
     border-color: var(--omni-theme-primary-color);
     width: fit-content;
+    overflow: hidden;
 }
 
 .component-framework-toggle > * {
